--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,65 @@
-<h1></h1>
+
+<h1> Welcome to CSE Motors!</h1>
+<section class="picture-section">
+    <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/vehicles/delorean.jpg"
+        alt="Delorean Car">
+
+    <div class="overlay">
+        <h2>DMC Delorean</h2>
+        <ul>
+            <li>3 Cup Holders</li>
+            <li>Superman doors</li>
+            <li>Fuzzy dice!</li>
+        </ul>
+        <a href="#"><img
+                src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/site/own_today.png?raw=true"
+                alt="Own Today"></a>
+    </div>
+</section>
+
+<section class="double">
+<section class="upgrades-section">
+    <h2>Delorean Upgrades</h2>
+    <div class="upgrade-container">
+        <div class="upgrade-item">
+            <div class="blue-box">
+                <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/bumper_sticker.jpg?raw=true"
+                    alt="Bumper Sticker">
+            </div>
+            <a href="#">Bumper Sticker</a>
+        </div>
+        <div class="upgrade-item">
+            <div class="blue-box">
+                <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/flame.jpg?raw=true"
+                    alt="Flame Upgrade">
+            </div>
+            <a href="#">Flame</a>
+        </div>
+        <div class="upgrade-item">
+            <div class="blue-box">
+                <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/flux-cap.png?raw=true"
+                    alt="Flux Capacitor">
+            </div>
+            <a href="#">Flux Capacitor</a>
+        </div>
+        <div class="upgrade-item">
+            <div class="blue-box">
+                <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/hub-cap.jpg?raw=true"
+                    alt="Hub Cap">
+            </div>
+            <a href="#">Hub Cap</a>
+        </div>
+    </div>
+</section>
+<section class="reviews-section">
+    <h2>DMC Delorean Reviews</h2>
+    <ul>
+        <li>"So fast it's almost like traveling in time." (4/5)</li>
+        <li>"Coolest ride on the road." (4/5)</li>
+        <li>"I'm feeling McFly!" (5/5)</li>
+        <li>"The most futuristtic ride of our day." (4.5/5)</li>
+        <li>"80's livinand I love it!" (5/5)</li>
+    </ul>
+</section>
+</section>
+</html>
