--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,26 +1,20 @@
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-
-}
-
 :root {
   --bg_blue: #4c96d7;
   --secondary-color: #333;
+  --White: white;
+  --whitesmoke: whitesmoke;
+  --black: black;
 }
 
 /* Styles all sections */
 body {
-
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 10px;
-
 }
-#wrapper {
-  background-color: whitesmoke;
 
+#wrapper {
+  background-color: var(--whitesmoke);
 }
 
 section {
@@ -36,54 +30,154 @@ ul {
   padding: 0;
 }
 
-/* Picture section */
+/* Header */
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--whitesmoke);
+  color: var(--black);
+  padding: 10px 20px;
+}
+
+.siteName a {
+  font-size: 32px;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--black);
+}
+
+#tools a {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--black);
+}
+
+main {
+  background-color: var(--whitesmoke);
+}
+
+/* Navigation */
+nav {
+  background-color: var(--black);
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+nav ul li {
+  padding: 10px 20px;
+  font-size: 18px;
+  color: var(--White);
+}
+
+nav ul li a {
+  color: var(--White);
+  text-decoration: none;
+  padding: 15px 15px;
+  transition: background-color 0.3s ease;
+}
+
+nav ul li:hover {
+  background-color: var(--bg_blue);
+  color: var(--White);
+}
+
+
+ul.custom-bullet li {
+  margin-right: 0;
+  margin-bottom: 10px;
+}
+
+ul.custom-bullet {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Picture Section*/
 .picture-section {
   position: relative;
-  /* Add position relative */
   text-align: center;
+  background-color: var(--whitesmoke);
 }
 
 .picture-section img {
   max-width: 100%;
 }
 
-.overlay {
+.section.picture-section {
+  grid-column: span 2;
+  text-align: center;
+}
+
+/* delorean Own today */
+.OwnToday {
   position: absolute;
   top: 50%;
   left: 30%;
   transform: translate(-50%, -50%);
   color: var(--bg_blue);
   background-color: rgba(255, 255, 255, 0.7);
-  /* White with 70% opacity */
   text-align: left;
-  /* Align text to the left */
+  padding: 5px;
+}
+
+.OwnToday h2,
+.OwnToday a {
+  margin: 1;
+}
+
+.OwnToday a {
+  /* display: block;*/
+  transition: filter 0.3s ease;
+}
+
+.OwnToday a:hover img {
+  filter: brightness(80%);
+}
+
+/* Second box - Upgrades and Reviews */
+
+.Secondbox {
+  /*
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  */
+  gap: 20px;
+  background-color: var(--whitesmoke);
+}
+
+.section.upgrades-section .section.review-section {
+  width: 90%;
+}
+
+.section.upgrades-section {
+  order: 1;
+}
+
+.section.review-section {
+  order: 2;
+}
+
+/* Upgrades and Reviews section */
+.review-section li {
+  list-style-type: disc;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
   padding: 20px;
 }
 
-.overlay h2,
-.overlay a {
-  margin: 0;
-}
-
-.overlay a {
-  display: block;
-  transition: filter 0.3s ease;
-  /* Add transition for smooth effect */
-}
-
-.overlay a:hover img {
-  filter: brightness(80%);
-  /* Apply brightness effect on hover */
-}
-
-/* Reviews section */
-.reviews-section {
-  background-color: #f4f4f4;
-}
-
-/* Upgrades section */
-.upgrades-section {
-  background-color: #f4f4f4;
+.upgrades-section .review-section {
+  background-color: var(--whitesmoke);
 }
 
 .upgrade-container {
@@ -95,6 +189,13 @@ ul {
   width: 50%;
   padding: 10px;
   box-sizing: border-box;
+}
+
+.upgrade-item a {
+  display: block;
+  text-align: center;
+  color: var(--black);
+  text-decoration: none;
 }
 
 .blue-box {
@@ -109,174 +210,55 @@ ul {
   height: auto;
 }
 
-.upgrade-item a {
-  display: block;
-  text-align: center;
-  color: #000;
-  text-decoration: none;
-}
-
-/* Picture section */
-.picture-section {
-  grid-column: span 2;
-  /* Span both columns */
-  text-align: center;
-}
-
-.reviews-section {
-  order: 2;
-  /* Place the reviews section as the second item */
-}
-.reviews-section li{
-  list-style-type: disc;
-}
-
-/* Upgrades section */
-.upgrades-section {
-  order: 1;
-  /* Place the upgrades section as the first item */
-}
-
-/* Reviews and upgrades */
-.reviews-section,
-.upgrades-section {
-  width: 90%;
-  /* Each section takes full width */
-}
-.double{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-}
-
-/* Header */
-#top-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  color: #000;
-  padding: 10px 20px;
-}
-
-.siteName a {
-  font-size: 32px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #000;
-}
-
-#tools {
-  font-variant: small-caps;
-}
-
-#tools a {
-  font-size: 16px;
-  letter-spacing: 2px;
-  text-decoration: none;
-  /* Remove underline */
-  color: #000;
-}
-
-#tools a:hover,
-a:hover {
-  color: #ccc;
-  /* Change the color on hover if needed */
-}
-
-/* Navigation */
-nav {
-  background-color: black;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-  /* Evenly distribute items */
-}
-
-nav ul li {
-  padding: 10px 20px;
-  /* Add padding to create space around each item */
-  font-size: 18px;
-  /* Increase font size */
-  color: #fff;
-
-}
-
-nav ul li a {
-  color: #fff;
-  /* White font color */
-  text-decoration: none;
-  padding: 15px 15px;
-  /* Add padding to create larger hover area */
-  transition: background-color 0.3s ease;
-  /* Smooth transition for hover effect */
-}
-
-nav ul li:hover {
-  background-color: #fdfbfb;
-  color: blue ;
-}
-
 /* Footer */
 footer {
-  
   width: 100%;
-  /* Full width */
   padding: 10px 20px;
-  /* Add padding */
 }
 
 footer p {
   margin: 0;
-  /* Remove default margin */
 }
 
-/* Web layout using CSS Grid */
-@media screen and (min-width: 768px) {
 
-  /* Grid container */
+@media screen and (min-width: 768px) {
   body {
-    
-    /* display: grid;
-    /* grid-template-columns: 1fr 1fr;
-    /* Two columns of equal width */
-    /* gap: 20px;
-    /* Gap between grid items */
     margin: 20px auto;
-    /* Slight margin for top and bottom */
-    padding: 10px 20px;
+    padding: 0px;
     max-width: 80%;
-    /* 80% of the screen width */
     background-image: url("https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/site/checkerboard.jpg");
     background-size: cover;
-    /* Cover the entire body */
     background-repeat: no-repeat;
-    /* No repeating */
     background-attachment: fixed;
-    /* Fixed background */
     border: 10px solid #007bff;
-    /* Blue border */
     border-radius: 20px;
-    /* Soft, curved corners */
-    background-color: #fff;
-    /* White background */
   }
+  
 }
 
-/* Media query for mobile view */
-@media screen and (max-width: 600px) {
-  nav ul li {
-    padding: 15px 20px;
-    /* Increase padding for thicker nav bar in mobile view */
+@media only screen and (min-width: 560px) {
+  nav li {
+    display: flexbox;
+    /* estaba flexbox */
+    width: 25%;
+    float: left;
   }
 
-  footer {
-    font-size: 14px;
-    /* Adjust font size for smaller screens if needed */
+  .OwnToday img {
+    float: right;
+    width: 48%;
+    margin-left: 2%;
+    padding-bottom: .5rem;
+  }
+
+  .Secondbox {
+    clear: both;
+    column-count: 2;
+    column-rule: 1px solid #ddd;
+  }
+
+  ul.custom-bullet li {
+    flex: 1;
+    margin-right: 10px;
   }
 }
