--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/vehicles/delorean.jpg"
         alt="Delorean Car">
 
-    <div class="overlay">
+    <div class="OwnToday">
         <h2>DMC Delorean</h2>
         <ul>
             <li>3 Cup Holders</li>
@@ -17,7 +17,7 @@
     </div>
 </section>
 
-<section class="double">
+<section class="Secondbox">
 <section class="upgrades-section">
     <h2>Delorean Upgrades</h2>
     <div class="upgrade-container">
@@ -51,15 +51,18 @@
         </div>
     </div>
 </section>
-<section class="reviews-section">
+<section class="review-section">
     <h2>DMC Delorean Reviews</h2>
-    <ul>
-        <li>"So fast it's almost like traveling in time." (4/5)</li>
-        <li>"Coolest ride on the road." (4/5)</li>
-        <li>"I'm feeling McFly!" (5/5)</li>
-        <li>"The most futuristtic ride of our day." (4.5/5)</li>
-        <li>"80's livinand I love it!" (5/5)</li>
-    </ul>
-</section>
+    <div class="review-container">
+        <div class=review-item>
+            <ul>
+                <li>"So fast it's almost like traveling in time." (4/5)</li>
+                <li>"Coolest ride on the road." (4/5)</li>
+                <li>"I'm feeling McFly!" (5/5)</li>
+                <li>"The most futuristtic ride of our day." (4.5/5)</li>
+                <li>"80's livinand I love it!" (5/5)</li>
+            </ul>
+        </div>
+    </div>
 </section>
 </html>
