--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,19 @@
-<nav>
-    <ul>
-        <li>Home</li>
-        <li>Custom</li>
-        <li>Sedan</li>
-        <li>SUV</li>
-        <li>Truck</li> 
+<nav class="clearfix">
+    <ul class="custom-bullet">
+      <li>
+        <a href="">Home</a>
+      </li>
+      <li>
+        <a href="">Custom</a>
+      </li>
+      <li>
+        <a href="">Sedan</a>
+      </li>
+      <li>
+        <a href="">SUV</a>
+      </li>
+      <li>
+        <a href="">Truck</a>
+      </li>
     </ul>
-</nav>
+  </nav>
