--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,7 @@
 <section class="picture-section">
     <h1> Welcome to CSE Motors!</h1>
 
-    <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/vehicles/delorean.jpg"
-        alt="Delorean Car">
+    <img src="/images/vehicles/delorean.jpg" alt="Delorean CAr" width="400" height="auto" class="delorean-image">
 
     <div class="OwnToday">
         <h2>DMC Delorean</h2>
@@ -12,7 +11,7 @@
             <li>Fuzzy dice!</li>
         </ul>
         <a href="#"><img
-                src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/site/own_today.png?raw=true"
+                src="/images/site/own_today.png"
                 alt="Own Today"></a>
     </div>
 </section>
@@ -23,28 +22,28 @@
         <div class="upgrade-container">
             <div class="upgrade-item">
                 <div class="blue-box">
-                    <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/bumper_sticker.jpg?raw=true"
+                    <img src="/images/upgrades/bumper_sticker.jpg"
                         alt="Bumper Sticker">
                 </div>
                 <a href="#">Bumper Sticker</a>
             </div>
             <div class="upgrade-item">
                 <div class="blue-box">
-                    <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/flame.jpg?raw=true"
+                    <img src="/images/upgrades/flame.jpg"
                         alt="Flame Upgrade">
                 </div>
                 <a href="#">Flame</a>
             </div>
             <div class="upgrade-item">
                 <div class="blue-box">
-                    <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/flux-cap.png?raw=true"
+                    <img src="/images/upgrades/flux-cap.png"
                         alt="Flux Capacitor">
                 </div>
                 <a href="#">Flux Capacitor</a>
             </div>
             <div class="upgrade-item">
                 <div class="blue-box">
-                    <img src="https://raw.githubusercontent.com/VergaraJames/newrepo/main/public/images/upgrades/hub-cap.jpg?raw=true"
+                    <img src="/images/upgrades/hub-cap.jpg"
                         alt="Hub Cap">
                 </div>
                 <a href="#">Hub Cap</a>
