--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <section class="picture-section">
     <h1> Welcome to CSE Motors!</h1>
 
-    <img src="/images/vehicles/delorean.jpg" alt="Delorean CAr" width="400" height="auto" class="delorean-image">
+    <img src="/images/vehicles/delorean.jpg" alt="Delorean" >
 
     <div class="OwnToday">
         <h2>DMC Delorean</h2>
@@ -17,7 +17,7 @@
 </section>
 
 <section class="Secondbox">
-    <section class="upgrades-section">
+    <div class="upgrades-section">
         <h2>Delorean Upgrades</h2>
         <div class="upgrade-container">
             <div class="upgrade-item">
@@ -49,7 +49,7 @@
                 <a href="#">Hub Cap</a>
             </div>
         </div>
-    </section>
+    </div>
     <section class="review-section">
         <h2>DMC Delorean Reviews</h2>
         <div class="review-container">
