--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <section class="picture-section">
     <h1> Welcome to CSE Motors!</h1>
+    <%- messages() %>
 
     <img src="/images/vehicles/delorean.jpg" alt="Delorean" >
 
