--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@
   --White: white;
   --whitesmoke: whitesmoke;
   --black: black;
+  --red:red;
 }
 
 /* Styles all sections */
@@ -22,6 +23,15 @@ section {
 }
 h1 {
   text-align: left;
+}
+
+/* style of Message*/
+.notice{
+  text-align: left;
+  color: var(--red);
+  list-style-type:disc;
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 h2 {
