--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,36 +1,37 @@
 <div class="register">
-    <h1><%= title %></h1>
-    <p><%- messages() %></p>
-    <% if (errors) { %>
-        <ul class="notice">
-       <% errors.array().forEach(error => { %>
-         <li><%= error.msg %></li>
-      <%  }) %>
-       </ul>
-      <% } %>
-    <form action="/account/register" method="post">
-        <label for="account_firstname">First Name:</label>
-        <input type="text" id="account_firstname" name="account_firstname" required>
-        
-        <label for="account_lastname">Last Name:</label>
-        <input type="text" id="account_lastname" name="account_lastname" required>
-        
-        <label for="account_email">Email:</label>
-        <input type="email" id="account_email" name="account_email" required>
-        
-        <div class="password-requirements">
-          <p>Password must be at least 8 characters and contain:</p>
-          <ul>
-            <li>1 number</li>
-            <li>1 capital letter</li>
-            <li>1 special character</li>
-          </ul>
-        </div>
-        <label for="account_password">Password:</label>
-        <input type="password" id="account_password" name="account_password" required 
-               pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{8,}$" 
-               placeholder="Enter your password">
-        
-        <button type="submit">Register</button>
-    </form>
+  <h1><%= title %></h1>
+  <p><%- messages() %></p>
+  <% if (errors) { %>
+      <ul class="notice">
+     <% errors.array().forEach(error => { %>
+       <li><%- error.msg.replace(/\n/g, '<br>') %></li>
+    <%  }) %>
+     </ul>
+    <% } %>
+  <form action="/account/register" method="post">
+      <form action="/account/register" method="post">
+          <label for="account_firstname">First Name:</label>
+          <input type="text" name="account_firstname" id="account_firstname" required value="<%= locals.account_firstname %>">
+          
+          <label for="account_lastname">Last Name:</label>
+          <input type="text" name="account_lastname" id="account_lastname" required value="<%= locals.account_lastname %>">
+          
+          <label for="account_email">Email:</label>
+          <input type="email" name="account_email" id="account_email" required value="<%= locals.account_email %>">
+          
+      <div class="password-requirements">
+        <p>Password must be at least 8 characters and contain:</p>
+        <ul>
+          <li>1 number</li>
+          <li>1 capital letter</li>
+          <li>1 special character</li>
+        </ul>
+      </div>
+      <label for="account_password">Password:</label>
+      <input type="password" id="account_password" name="account_password" required 
+             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{8,}$" 
+             placeholder="Enter your password">
+      
+      <button type="submit">Register</button>
+  </form>
 </div>
