--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -14,18 +14,18 @@
       <!-- from video https://www.youtube.com/watch?v=rn5RyFnl2wA -->
       <!-- From Guide https://blainerobertson.github.io/340-js/views/clientside-validation.html -->
       <div id="registerContainer">
-        <p> All fields are requiered.</p>
         <form action="/account/register" method="post">
+          <p> All fields are requiered.</p>
           <label for="account_firstname">First Name:</label>
-          <input type="text" name="account_firstname" id="account_firstname" required
+          <input type="text" name="account_firstname" id="account_firstname" required placeholder="Enter your First Name"
             value="<%= locals.account_firstname %>">
 
           <label for="account_lastname">Last Name:</label>
-          <input type="text" name="account_lastname" id="account_lastname" required
+          <input type="text" name="account_lastname" id="account_lastname" required placeholder="Enter your Last Name"
             value="<%= locals.account_lastname %>">
 
           <label for="account_email">Email:</label>
-          <input type="email" name="account_email" id="account_email" required value="<%= locals.account_email %>">
+          <input type="email" name="account_email" id="account_email" required placeholder="Enter your email account" value="<%= locals.account_email %>">
 
           <div class="password-requirements">
             <p>Password must be at least 8 characters and contain:</p>
