--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,45 +1,45 @@
+<!-- The Register page -->
 <div class="register">
-  <h1>
-    <%= title %>
-  </h1>
+  <h1><%= title %></h1>
   <p><%- messages() %></p>
-  <!-- From Guide https://blainerobertson.github.io/340-js/views/clientside-validation.html -->
-  <% if (errors) { %>
-    <ul class="notice">
-      <% errors.array().forEach(error=> { %>
-        <li><%- error.msg.replace(/\n/g, '<br>' ) %></li>
-        <% }) %>
-    </ul>
-    <% } %>
-      <!-- from video https://www.youtube.com/watch?v=rn5RyFnl2wA -->
-      <!-- From Guide https://blainerobertson.github.io/340-js/views/clientside-validation.html -->
-      <div id="registerContainer">
+    <% if (locals.errors && locals.errors.length> 0) { %>
+      <ul class="notice">
+        <% locals.errors.forEach(error=> { %>
+          <li>
+            <%= error.msg %>
+          </li>
+          <% }) %>
+      </ul>
+      <% } %>
+        <!-- From Guide https://blainerobertson.github.io/340-js/views/clientside-validation.html -->
+        <!-- from video https://www.youtube.com/watch?v=rn5RyFnl2wA -->
+        <!-- From Guide https://blainerobertson.github.io/340-js/views/clientside-validation.html -->
         <form action="/account/register" method="post">
           <p> All fields are requiered.</p>
+
           <label for="account_firstname">First Name:</label>
-          <input type="text" name="account_firstname" id="account_firstname" required placeholder="Enter your First Name"
-            value="<%= locals.account_firstname %>">
+          <input type="text" name="account_firstname" id="account_firstname" required
+            placeholder="Enter your First Name" value="<%= locals.account_firstname %>">
 
           <label for="account_lastname">Last Name:</label>
           <input type="text" name="account_lastname" id="account_lastname" required placeholder="Enter your Last Name"
             value="<%= locals.account_lastname %>">
 
           <label for="account_email">Email:</label>
-          <input type="email" name="account_email" id="account_email" required placeholder="Enter your email account" value="<%= locals.account_email %>">
+          <input type="email" name="account_email" id="account_email" required placeholder="Enter a valid email account"
+            value="<%= locals.account_email %>">
 
+          <!-- From video https://www.youtube.com/watch?v=hlIb4fXCFjA -->
           <div class="password-requirements">
             <p>Password must be at least 8 characters and contain:</p>
             <ul>
-              <li>1 number</li>
-              <li>1 capital letter</li>
-              <li>1 special character</li>
+              <li>1 number + 1 capital letter + 1 special character</li>
             </ul>
           </div>
           <label for="account_password">Password:</label>
           <input type="password" id="account_password" name="account_password" required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{8,}$" placeholder="Enter your password">
-
+<!--          <div id="pswdBtn">Show Password</div> -->
           <button type="submit">Register</button>
         </form>
-      </div>
 </div>
