Work weeks 6 - 7 Login and Inventory details 08Mar25

--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,7 +1,7 @@
 <!-- The Error page -->
 <div class="error-page">
   <h1><%= title %></h1>
-  <p><%- message %></p>
+  <p><%- messages() %></p>
 
   <div class="fun-section">
     <p>Don't worry—it's not you, it's us (probably).</p>
