Work weeks 6 - 7 Login and Inventory details 08Mar25

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -107,7 +107,7 @@ h1 {
   text-align: center;
   margin: 20px auto;
   max-width: 300px;
-  background-color: #33c2e6;
+  background-color: #f4d4d4;
   border: 1px solid #055972;
   padding: 10px;
   border-radius: 4px;
