--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,16 +1,13 @@
 <!-- The Login page -->
+<% if (title) { %>
+  <h1> <%= title %></h1>
+<% } else {
+  res.redirect('/')
+} %>
+
+<%- messages() %>
+
 <div class="login">
-  <h1><%= title %></h1>
-  <p><%- messages() %></p>
-  <% if (locals.errors) { %>
-    <ul class="error-list">
-      <% errors.forEach(error=> { %>
-        <li>
-          <%= error.msg %>
-        </li>
-        <% }) %>
-    </ul>
-    <% } %>
       <!-- From the video https://www.youtube.com/watch?v=5H0aIxO1oC0 -->
       <form id="loginForm" action="/account/login" method="post">
         <label for="account_email">Email</label>
@@ -27,7 +24,7 @@
         <input type="password" id="account_password" name="account_password" required 
           pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{8,}$" placeholder="Enter your password">
 
-        <button type="submit">Login</button>
+        <input type="submit" value="Login">
         <p>Don't have an account? <a href="/account/register">Sign-up here</a></p>
       </form>
 </div>
