--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,12 @@
 /* Styles all sections */
 body {
-  --bg_blue: #88abeb;
+  --colorLogin: #d2e1de;
+  --borderlogin:#3833a1;
+  --colorNotice: #f4d4d4;
+  --borderNotice:#055972; 
   --secondary-color: #333;
+  --colorFields: #666;
+  --colorBotton: #535698;
   --White: white;
   --whitesmoke: whitesmoke;
   --black: black;
@@ -40,14 +45,14 @@ header {
   font-family: Arial, sans-serif;
   text-decoration: none;
   font-size: 2em;
-  color: black;
+  color: var(--black);
 }
 
 #tools a {
   font-family: Arial, sans-serif;
   text-decoration: none;
   font-size: 1em;
-  color: black;
+  color: var(--black);
 }
 
 /* Composition */
@@ -66,7 +71,7 @@ header {
 .menu {
   display: flex;
   flex-direction: column;
-  background-color: black;
+  background-color: var(--black);
   padding: 0;
   margin: 10px 0;
   font-size: 1em;
@@ -93,7 +98,7 @@ header {
   text-decoration: none;
   display: block;
   width: 100%;
-  color: white;
+  color: var(--White);
 }
 
 /* Top Half of Main Page */
@@ -107,8 +112,8 @@ h1 {
   text-align: center;
   margin: 20px auto;
   max-width: 300px;
-  background-color: #f4d4d4;
-  border: 1px solid #055972;
+  background-color: var(--colorNotice);
+  border: 1px solid var(--borderNotice);
   padding: 10px;
   border-radius: 4px;
   font-family: Arial, sans-serif;
@@ -117,19 +122,19 @@ h1 {
 }
 
 .notice li {
-  color: black;
+  color: var(--black);
   padding: 5px 0;
 }
 
 /* register styling */
 .register .password-requirements {
   font-size: 0.8em;
-  color: #666;
+  color: var(--colorFields);
   margin-bottom: 15px;
 }
 .login .password-requirements {
   font-size: 0.8em;
-  color: #666;
+  color: var(--colorFields);
   margin-bottom: 15px;
 }
 
@@ -177,8 +182,8 @@ input:required:valid {
 .button {
   display: inline-block;
   padding: 6px;
-  background-color: #0cb4df;
-  color: white;
+  background-color: var(--colorBotton);
+  color: var(--White);
   border-radius: 5px;
   text-decoration: none;
   box-shadow: 1px 1px 2.5px #2f3e46;
@@ -226,7 +231,7 @@ input:required:valid {
 .upgrade-item {
   margin: 10px 0;
   padding: 20px;
-  background-color: #0cb4df;
+  background-color: var(--colorFields);
   border-radius: 5px;
   display: flex;
   justify-content: center;
@@ -264,7 +269,7 @@ input:required:valid {
 #inv-display li {
   margin-bottom: 0;
   list-style-type: none;
-  background-color: #fff;
+  background-color: var(--White);
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -366,7 +371,7 @@ form {
   margin: 0 auto;
   padding: 15px;
   border: 1px solid #3833a1;
-  background-color: #92c6de;
+  background-color: var(--colorLogin);
   border-radius: 4px;
 }
 
@@ -394,8 +399,8 @@ input {
 }
 
 button {
-  background-color: #291178;
-  color: white;
+  background-color: var(--colorBotton);
+  color: var(--White);
   padding: 10px 15px;
   margin: 10px 0px;
   border: none;
@@ -428,8 +433,8 @@ a:hover {
   text-decoration: none;
   padding: 10px 20px;
   margin: 0px;
-  background-color: #0cb4df;
-  color: white;
+  background-color: var(--colorLogin);
+  color: var(--secondary-color);
   border-radius: 5px;
   transition: all 0.3s ease;
   font-family: Arial, sans-serif;
@@ -464,7 +469,7 @@ footer {
     width: 95%;
     justify-self: center;
     padding: 10px;
-    background-color: white;
+    background-color: var(--White);
     border: 5px solid #30aece;
     border-radius: 5px;
   }
